feat(backend): allow host providers to be active or not
Only active host providers are considered for the correct functioning of the EWP Node.
Thus, a given host plugin has the flexibility to activate, or not, a specific subset of host providers depending on the environment.